[gd_scene load_steps=10 format=2]

[ext_resource path="res://Ball.gd" type="Script" id=1]
[ext_resource path="res://sounds/wall_bounce.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/paddle_bounce.wav" type="AudioStream" id=3]
[ext_resource path="res://addons/Trail/trail_2d.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.944444 )
colors = PoolColorArray( 0.992157, 0.960784, 0.890196, 0.223529, 0.992157, 0.960784, 0.890196, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 16.0
color_ramp = SubResource( 3 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0.992157, 0.960784, 0.890196, 0, 0.992157, 0.960784, 0.890196, 0.243137 )

[node name="Ball" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0.992157, 0.960784, 0.890196, 1 )
polygon = PoolVector2Array( -8, -8, 8, -8, 8, 8, -8, 8 )

[node name="Particles2D" type="Particles2D" parent="."]
show_behind_parent = true
emitting = false
amount = 12
lifetime = 15.0
speed_scale = 15.0
local_coords = false
process_material = SubResource( 4 )

[node name="PaddleBounceAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="WallBounceAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="MotionTrail" type="Line2D" parent="."]
points = PoolVector2Array( 144, -24 )
width = 16.0
default_color = Color( 0.992157, 0.960784, 0.890196, 1 )
gradient = SubResource( 6 )
script = ExtResource( 4 )
